--- a/flask_site/templates/entries/index.html
+++ b/flask_site/templates/entries/index.html
@@ -158,7 +158,7 @@ sendButton2.addEventListener('click', function() {
                       <th></th>
                       <td id="id1"><input type="text" class="form-control" placeholder="192.168.100.xxx"></td>
                       <td><input type="text" class="form-control" placeholder="xxx.sv.xc"></td>
-                      <td><input type="text" class="form-control" placeholder="sugihara"></td>
+                      <td><input type="text" class="form-control" placeholder="xxxxxxxx"></td>
                   </tr>
           </table>
       </div>
