--- a/flask_site/templates/entries/index.html
+++ b/flask_site/templates/entries/index.html
@@ -83,9 +83,9 @@ document.addEventListener ('click', e => {
             console.log(JSON.parse(JSON.parse(xhr.responseText).ResultSet));
             var ip = JSON.parse(JSON.parse(xhr.responseText).ResultSet).a;
 
-            id1.innerHTML = "<input type=\"text\" class=\"form-control\" placeholder=\"" + "192.168.100." + tr.id + "\">"
-            id2.innerHTML = "<input type=\"text\" class=\"form-control\" placeholder=\"" + domainNum + "\">"
-            id3.innerHTML = "<input type=\"text\" class=\"form-control\" placeholder=\"" + usernameNum + "\">"
+            id1.innerHTML = "<input type=\"text\" name=\"hage_ip\" class=\"form-control\" placeholder=\"" + "192.168.100." + tr.id + "\">"
+            id2.innerHTML = "<input type=\"text\" name=\"hage_domain\" class=\"form-control\" placeholder=\"" + domainNum + "\">"
+            id3.innerHTML = "<input type=\"text\" name=\"hage_username\" class=\"form-control\" placeholder=\"" + usernameNum + "\">"
             id4.innerHTML = "<button id=\"" +  tr.id + "\" onclick=\"form_submit(this.id)\" type=\"button\" class=\"btn btn-success\" data-dismiss=\"modal\">Apply</button>"
 //            alert('Something went wrong.  Name is now ' + xhr.responseText);
         }
@@ -173,7 +173,7 @@ sendButton.addEventListener('click', function() {
 
 <table height="20"><tr><td></td></tr></table>
 
-<h1>DNS & DHCP Management.</h1>
+<h1>DNS Management.</h1>
 
 <div align="right">
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for..">
@@ -242,11 +242,32 @@ sendButton.addEventListener('click', function() {
 <script>
 function form_submit(arg){
 //    document.getElementById("search_form").submit();
+    var post_ip = document.getElementById('id1').getElementsByTagName('input')[0].getAttribute("placeholder");
+    var post_ip2 = document.hage.hage_ip.value;
+
+    var post_domain = document.getElementById('id2').getElementsByTagName('input')[0].getAttribute("placeholder");
+    var post_domain2 = document.hage.hage_domain.value;
+
+    var post_username = document.getElementById('id3').getElementsByTagName('input')[0].getAttribute("placeholder");
+    var post_username2 = document.hage.hage_username.value;
+
+    console.log('111111111111111111111111111111111111111111111')
+    console.log(post_ip)
+    console.log(post_ip2)
+    console.log('222222222222222222222222222222222222222222222')
+    console.log(post_domain)
+    console.log(post_domain2)
+    console.log('333333333333333333333333333333333333333333333')
+    console.log(post_username)
+    console.log(post_username2)
+    console.log('aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa')
+
     xhr2 = new XMLHttpRequest();
 
     xhr2.open('POST', '/apply', true);
     xhr2.setRequestHeader('Content-Type', 'application/json');
-    json_data = JSON.stringify({"id":arg, "ip":'192.168.100.boke',"domain":'oreno.xc',"username":'system_admin'});
+//    json_data = JSON.stringify({"id":arg, "ip":'192.168.100.boke',"domain":'oreno.xc',"username":'system_admin'});
+    json_data = JSON.stringify({"id":arg, "ip": post_ip2 || post_ip,"domain": post_domain2 || post_domain,"username":'system_admin'});
     xhr2.onload = function() {
         if (xhr2.readyState == 4 && xhr2.status === 200) {
             console.log(xhr2.responseText);
@@ -299,9 +320,10 @@ function form_submit(arg){
 <!-- <a class="btn btn-primary" data-toggle="moddal" href="#myModal"> -->
         <tr id="{{ i }}" data-toggle="modal" data-id="{{ i }}" data-target="#myModal" style="cursor: pointer;">
             <th></th>
-            <td>192.168.100.{{ i }}</td>
-            <td id="domain{{ i }}">xxxxxxxx</td>
-            <td id="username{{ i }}">:</td>
+<!--            <td>192.168.100.{{ i }}</td> -->
+            <td>{{ dns_dict[i].ip }}</td>
+            <td id="domain{{ i }}">{{ dns_dict[i].domain }}</td>
+            <td id="username{{ i }}">{{ dns_dict[i].username}}</td>
         </tr>
 <!-- </a> -->
         {% endfor %}
