--- a/flask_site/templates/entries/index.html
+++ b/flask_site/templates/entries/index.html
@@ -83,9 +83,9 @@ document.addEventListener ('click', e => {
             console.log(JSON.parse(JSON.parse(xhr.responseText).ResultSet));
             var ip = JSON.parse(JSON.parse(xhr.responseText).ResultSet).a;
 
-            id1.innerHTML = "<input type=\"text\" name=\"hage_ip\" class=\"form-control\" placeholder=\"" + "192.168.100." + tr.id + "\">"
-            id2.innerHTML = "<input type=\"text\" name=\"hage_domain\" class=\"form-control\" placeholder=\"" + domainNum + "\">"
-            id3.innerHTML = "<input type=\"text\" name=\"hage_username\" class=\"form-control\" placeholder=\"" + usernameNum + "\">"
+            id1.innerHTML = "<input type=\"text\" name=\"hage_ip\" class=\"form-control\" placeholder=\"" + "192.168.100." + tr.id + "\" readonly=\"readonly\">"
+            id2.innerHTML = "<input type=\"text\" name=\"hage_domain\" onInput=\"checkForm(this)\" class=\"form-control\" placeholder=\"" + domainNum + "\">"
+            id3.innerHTML = "<input type=\"text\" name=\"hage_username\" onInput=\"checkForm(this)\" class=\"form-control\" placeholder=\"" + usernameNum + "\">"
             id4.innerHTML = "<button id=\"" +  tr.id + "\" onclick=\"form_submit(this.id)\" type=\"button\" class=\"btn btn-success\" data-dismiss=\"modal\">Apply</button>"
 //            alert('Something went wrong.  Name is now ' + xhr.responseText);
         }
@@ -176,8 +176,18 @@ sendButton.addEventListener('click', function() {
 <h1>DNS Management.</h1>
 
 <div align="right">
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for..">
+<input class="form-control col-md-4" type="text" id="myInput" onInput="checkForm(this)" onkeyup="myFunction()" placeholder="Search for..">
 </div>
+
+<script>
+function checkForm($this) {
+    var str = $this.value;
+    while(str.match(/[^A-Z^a-z^\d\-\.\s]/)) {
+        str = str.replace(/[^A-Z^a-z^\d\-\.]/, "");
+    }
+    $this.value = str;
+}
+</script>
 
 <table height="20"><tr><td></td></tr></table>
 
@@ -277,10 +287,14 @@ function form_submit(arg){
             console.log(typeof(JSON.parse(xhr2.responseText).ResultSet));
 
             console.log(JSON.parse(JSON.parse(xhr2.responseText).ResultSet));
-            var return_ip = JSON.parse(JSON.parse(xhr2.responseText).ResultSet).a;
-
-            result.innerHTML = "<input type=\"text\" class=\"form-control\" placeholder=\"" + return_ip + "\">"
-//            result.innerHTML = "<input type=\"text\" class=\"form-control\" placeholder=\"" + ip + "\">"
+            var return_id = JSON.parse(JSON.parse(xhr2.responseText).ResultSet).id;
+            var return_ip = JSON.parse(JSON.parse(xhr2.responseText).ResultSet).ip;
+            var return_domain = JSON.parse(JSON.parse(xhr2.responseText).ResultSet).domain;
+            var return_username = JSON.parse(JSON.parse(xhr2.responseText).ResultSet).username;
+            console.log(return_id);
+            document.getElementById('domain' + return_id).textContent = return_domain;
+            document.getElementById('username' + return_id).textContent = return_username;
+//            domain2.innerHTML = "<input type=\"text\" class=\"form-control\" placeholder=\"" + ip + "\">"`
 //            alert('Something went wrong.  Name is now ' + xhr2.responseText);
         }
         else if (xhr2.status !== 200) {
@@ -331,7 +345,6 @@ function form_submit(arg){
     </tbody>
 </table>
 </div>
-
 
 
 
