--- a/flask_site/templates/entries/index.html
+++ b/flask_site/templates/entries/index.html
@@ -16,6 +16,7 @@
 <body>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 
+<!--
 <form name="fm">
 	      <div>
 	        <input id="name" type="text" placeholder="Name">
@@ -30,6 +31,7 @@
 	      </div>
 	    </form>
 <div id="result">result</div>
+-->
 
 
 
@@ -86,7 +88,7 @@ document.addEventListener ('click', e => {
             id1.innerHTML = "<input type=\"text\" name=\"hage_ip\" class=\"form-control\" placeholder=\"" + "192.168.100." + tr.id + "\" readonly=\"readonly\">"
             id2.innerHTML = "<input type=\"text\" name=\"hage_domain\" onInput=\"checkForm(this)\" class=\"form-control\" placeholder=\"" + domainNum + "\">"
             id3.innerHTML = "<input type=\"text\" name=\"hage_username\" onInput=\"checkForm(this)\" class=\"form-control\" placeholder=\"" + usernameNum + "\">"
-            id4.innerHTML = "<button id=\"" +  tr.id + "\" onclick=\"form_submit(this.id)\" type=\"button\" class=\"btn btn-success\" data-dismiss=\"modal\">Apply</button>"
+            id4.innerHTML = "<button id=\"" + tr.id + "\" onclick=\"delete_placeholder(this.id)\" type=\"button\" class=\"btn btn-danger\" data-dismiss=\"modal\">Clear</button><button id=\"" +  tr.id + "\" onclick=\"form_submit(this.id)\" type=\"button\" class=\"btn btn-success\" data-dismiss=\"modal\">Apply</button>"
 //            alert('Something went wrong.  Name is now ' + xhr.responseText);
         }
         else if (xhr.status !== 200) {
@@ -100,8 +102,7 @@ document.addEventListener ('click', e => {
 </script>
 
 
-/*
-<!-- test start -->
+<!-- test start
 <script>
 
 
@@ -140,11 +141,8 @@ sendButton.addEventListener('click', function() {
     xhr.send(json_data);
 
 });
-
 </script>
-<!-- test end -->
-*/
-
+-->
 
 
 
@@ -175,9 +173,23 @@ sendButton.addEventListener('click', function() {
 
 <h1>DNS Management.</h1>
 
+<table height="40"><tr><td></td></tr></table>
+
 <div align="right">
-<input class="form-control col-md-4" type="text" id="myInput" onInput="checkForm(this)" onkeyup="myFunction()" placeholder="Search for..">
+  <div class="input-group col-md-5">
+    <div class="input-group-prepend"> 
+      <button onclick="reflesh_search()" type="button" class="btn btn-danger"><i class="fas fa-sync-alt fa-lg"></i></button>
+    </div>
+    <input class="form-control" type="text" id="myInput" onInput="checkForm(this)" onkeyup="myFunction()" placeholder="Search for..">
+  </div>
 </div>
+
+<script>
+function reflesh_search() {
+    document.getElementById('myInput').value = "";
+    myFunction();
+}
+</script>
 
 <script>
 function checkForm($this) {
@@ -189,14 +201,28 @@ function checkForm($this) {
 }
 </script>
 
-<table height="20"><tr><td></td></tr></table>
+<table height="40"><tr><td></td></tr></table>
 
-<!-- Button to Open the Modal -->
+<!-- Button to Open the Modal 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
   Open modal
 </button>
+-->
+<button onclick="show100()" type="button" class="btn btn-primary" style="width:150px">192.168.100.0/24</button>
+<button onclick="show2()" type="button" class="btn btn-primary" style="width:150px">192.168.2.0/24</button>
 
-<table height="20"><tr><td></td></tr></table>
+<script>
+function show100() {
+    document.getElementById('myTable').style.display = "";
+    document.getElementById('myTable2').style.display = "none";
+}
+function show2() {
+    document.getElementById('myTable').style.display = "none";
+    document.getElementById('myTable2').style.display = "";
+}
+</script>
+
+<table height="40"><tr><td></td></tr></table>
 
 <!-- The Modal -->
 <div class="modal" id="myModal">
@@ -206,7 +232,7 @@ function checkForm($this) {
       <!-- Modal Header -->
       <div class="modal-header">
         <h4 class="modal-title">Modal Heading</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <button type="button" id="close" class="close" data-dismiss="modal">&times;</button>
       </div>
 
       <!-- Modal body -->
@@ -244,9 +270,36 @@ function checkForm($this) {
 
       <!-- Modal footer -->
       <div id="id4" class="modal-footer">
+          <button onclick="delete_placeholder(this.id)" type="button" class="btn btn-danger" data-dismiss="modal">Clear</button>
           <button onclick="form_submit(this.id)" type="button" class="btn btn-success" data-dismiss="modal">Apply</button>
       </div>
       </form>
+
+<!-- modal form clear start -->
+<script>
+function delete_placeholder(arg) {
+    var delete_domain = "domain" + arg;
+    var delete_username = "username" + arg;
+    document.getElementById('domain' + arg).textContent = "";
+    document.getElementById('username' + arg).textContent = "";
+
+    xhr3 = new XMLHttpRequest();
+    xhr3.open('POST', '/clear', true);
+    xhr3.setRequestHeader('Content-Type', 'application/json');
+    json_data = JSON.stringify({"id": arg});
+    xhr.onload = function() {
+        if (xhr.readyState == 4 && xhr.status === 200) {
+            console.log('clear success');
+        }
+        else if (xhr.status !== 200) {
+            alert('Request failed.  Returned status of ' + xhr.status);
+        }
+    };
+    xhr3.send(json_data);
+}
+
+</script>
+<!-- modal form clear end -->
 
 <!-- modal form submit start -->
 <script>
@@ -344,7 +397,41 @@ function form_submit(arg){
         {% endfor %}
     </tbody>
 </table>
+<table class="table table-hover" id="myTable2" style="display:none">
+    <thead>
+        <tr class="header">
+            <div class="">
+              <th></th>
+            </div>
+            <div class="">
+              <th>IP Address</th>
+            </div>
+            <div class="">
+              <th>Domain Name</th>
+            </div>
+            <div class="">
+              <th>Username</th>
+            </div>
+        </tr>
+    </thead>
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"> -->
+    <tbody>
+        {% for i in range(255,509) %}
+<!-- <a class="btn btn-primary" data-toggle="moddal" href="#myModal"> -->
+        <tr id="{{ i }}" data-toggle="modal" data-id="{{ i }}" data-target="#myModal" style="cursor: pointer;">
+            <th></th>
+<!--            <td>192.168.100.{{ i - 254 }}</td> -->
+            <td>{{ dns_dict[i].ip }}</td>
+            <td id="domain{{ i }}">{{ dns_dict[i].domain }}</td>
+            <td id="username{{ i }}">{{ dns_dict[i].username}}</td>
+        </tr>
+<!-- </a> -->
+        {% endfor %}
+    </tbody>
+</table>
+
 </div>
+
 
 
 
@@ -387,8 +474,38 @@ var socket = io.connect('http://' + '192.168.100.123' + ':' + '10080');
 
 socket.on('some event', function(msg) {
     console.log('chat--------------------------------------------------')
-    result.innerHTML=msg.data;
+//    result.innerHTML=msg.data;
+    realtime_change(msg.data);
 });
+
+socket.on('modal_form', function(data) {
+    if (document.getElementById('id4').getElementsByTagName('button')[0].getAttribute('id') == data.id) {
+        id1.innerHTML = "<input type=\"text\" name=\"hage_ip\" class=\"form-control\" placeholder=\"" + "192.168.100." + data.ip + "\" readonly=\"readonly\">"
+        id2.innerHTML = "<input type=\"text\" name=\"hage_domain\" onInput=\"checkForm(this)\" class=\"form-control\" placeholder=\"" + data.domain + "\">"
+        id3.innerHTML = "<input type=\"text\" name=\"hage_username\" onInput=\"checkForm(this)\" class=\"form-control\" placeholder=\"" + data.username + "\">"
+    }
+});
+
+socket.on('not_modal_form', function(data) {
+    document.getElementById('domain' + data.id).textContent = data.domain
+    document.getElementById('username' + data.id).textContent = data.username
+});
+</script>
+
+<script>
+function realtime_change(data) {
+    result.innerHTML=data;
+}
+
+</script>
+
+<script>
+window.onkeydown = function(e) {
+    if ( e.keyCode == 27 ) {
+        document.getElementById('close').click();
+        console.log( 'escape pressed' );
+    }
+};
 </script>
 
 
@@ -399,6 +516,8 @@ socket.on('some event', function(msg) {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
 
 </body>
 
