--- a/flask_site/templates/entries/index.html
+++ b/flask_site/templates/entries/index.html
@@ -22,7 +22,7 @@ body {
 }
 div#foo {
     position:fixed;
-    left: 55%;
+    left: 50%;
     top: 50%;
 /*    border: 1px solid blue; */
     border: none;
@@ -32,18 +32,35 @@ div#foo {
 /*    height: 120px; */
     height: 12px;
 /*    margin-left: -80px; */
-    margin-left: -80px; 
+    margin-left: -8px; 
 /*    margin-top: -60px; */
-    margin-top: -60px;
+    margin-top: -6px;
 }
 </style>
 
+<script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@2.6.1/lib/bodyScrollLock.min.js"></script>
 </head>
 
 
 <body style="display">
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
+
+<button onclick="on_event()"></button>
+<button onclick="off_event()"></button>
+
+<script>
+function opai(){
+    var usui = document.getElementsByTagName('body')[0];
+    usui.style.opacity = 0.5;
+}
+function opai2(){
+    var usui2 = document.getElementsByTagName('body')[0];
+    usui2.style.opacity = 1.0;
+}
+</script>
+
+
 
 
 <div id="foo" style="display:none"></div>
@@ -56,7 +73,9 @@ div#foo {
             radius: 40, // The radius of the inner circle
             corners: 1, // Corner roundness (0..1)
             rotate: 0, // The rotation offset
-            color: '#5cb85c', // #rgb or #rrggbb #5cb85c #000
+//            color: '#5cb85c', // #rgb or #rrggbb #5cb85c #000
+            color: '#1fff7f', // #rgb or #rrggbb #5cb85c #000
+//            color: '#003300', // #rgb or #rrggbb #5cb85c #000
             speed: 1, // Rounds per second
             trail: 60, // Afterglow percentage
             shadow: false, // Whether to render a shadow
@@ -115,6 +134,7 @@ document.addEventListener ('click', e => {
   if (!tr) {
     return;
   }
+
 
   if (tr)
     console.log (tr);
@@ -228,7 +248,7 @@ sendButton.addEventListener('click', function() {
 
 <table height="20"><tr><td></td></tr></table>
 
-<h1>DNS Management.</h1>
+<h1>DNS Management.(Under construction)</h1>
 
 <table height="40"><tr><td></td></tr></table>
 
@@ -393,6 +413,9 @@ function form_submit(arg){
         var target = document.getElementById('foo');
         target.style.display = ""
         var spinner = new Spinner(opts).spin(target);
+        bodyScrollLock.disableBodyScroll('body');
+        opai();
+
 
     xhr2.open('POST', '/apply', true);
     xhr2.addEventListener("progress", function(ev) {
@@ -400,6 +423,8 @@ function form_submit(arg){
         console.log(p+"%");
         spinner.stop();
         target.style.display = "none"
+        bodyScrollLock.enableBodyScroll('body');
+        opai2();
     
     });
     xhr2.setRequestHeader('Content-Type', 'application/json');
@@ -645,6 +670,10 @@ window.addEventListener('DOMContentLoaded', function(e){
       if(current_Ele.textContent == "Apply"){
         return;
       }
+      if(current_Ele.textContent == "Clear"){
+        document.getElementsByClassName('btn-danger')[0].click()
+        return;
+      }
       if(e.keyCode==13){
         document.getElementsByClassName('btn-success')[0].click()
       }
@@ -658,6 +687,7 @@ window.addEventListener('DOMContentLoaded', function(e){
 //  });
 });
 </script>
+
 
 <!-- jQuery、Popper.js、Bootstrap JS -->
 
